tests/parser/assignment/invalid_01.m.out
In invalid_01.m, line 2
|   [x; y] = size(1);
|     ^ error: expected A_KET, found SEMICOLON instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
