tests/parser/assignment/invalid_01.m
function invalid_01()
  [x; y] = size(1);
end
